--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-native-screens": "3.31.1",
     "@react-navigation/stack": "*",
     "@react-navigation/native": "6.0.0",
-    "@react-native-firebase/app": "20.3.0",
+    "@react-native-firebase/app": "*",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "@react-native-firebase/firestore": "*"
