--- a/package.json
+++ b/package.json
@@ -7,23 +7,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.3",
     "@react-native-firebase/app": "*",
     "@react-native-firebase/firestore": "*",
     "@react-navigation/native": "6.0.0",
     "@react-navigation/stack": "*",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
     "expo": "~51.0.39",
     "expo-status-bar": "~1.12.1",
-    "firebase": "10",
+    "express": "^4.21.2",
+    "firebase": "^10.14.1",
+    "firebase-admin": "^13.0.2",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.3"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
