Added example of using React Native Dotenv

--- a/dotenv.example
+++ b/dotenv.example
@@ -4,3 +4,5 @@ FIREBASE_PROJECT_ID=<your-project-id>
 FIREBASE_STORAGE_BUCKET=<your-storage-bucket>
 FIREBASE_MESSAGING_SENDER_ID=<your-messaging-sender-id>
 FIREBASE_APP_ID=<your-app-id>
+
+TMDB_BEARER_TOKEN=<your-bearer-token>
