--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/vector-icons": "^14.0.3",
     "@react-native-firebase/app": "*",
     "@react-native-firebase/firestore": "*",
+    "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
     "cookie-parser": "^1.4.7",
@@ -23,8 +24,8 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "4.9.2",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "*",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^4.11.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
