--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
     "cookie-parser": "^1.4.7",
-    "expo": "~51.0.39",
+    "expo": "^53.0.0",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.14.1",
     "firebase-admin": "^13.0.2",
