--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-firebase/app": "*",
     "@react-native-firebase/firestore": "*",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
     "cookie-parser": "^1.4.7",
-    "expo": "^53.0.0",
+    "expo": "48.0.18",
+    "expo-location": "~18.1.5",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.14.1",
     "firebase-admin": "^13.0.2",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
     "react-native-dotenv": "^3.4.11"
   },
   "private": true
