--- a/package.json
+++ b/package.json
@@ -7,30 +7,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.3",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "*",
     "@react-native-firebase/firestore": "*",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
     "cookie-parser": "^1.4.7",
-    "expo": "48.0.18",
-    "expo-location": "~18.1.5",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^53.0.0",
+    "expo-location": "~18.1.6",
+    "expo-status-bar": "~2.2.3",
     "firebase": "^10.14.1",
     "firebase-admin": "^13.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "4.9.2",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^4.11.1",
-    "react-native-web": "~0.19.10"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "@babel/plugin-transform-private-methods": "^7.27.1",
     "react-native-dotenv": "^3.4.11"
   },
