--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@firebase/app": "^0.13.2",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "*",
     "@react-native-firebase/firestore": "*",
